[package]
name = "deck_of_cards_simulator_backend"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
async-std = "1.9.0"
futures = "0.3.15"
async-tungstenite = "0.13.1"