[package]
name = "deck_of_cards_simulator_backend"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
async-std = "1.9.0"
futures = "0.3.15"
async-tungstenite = "0.13.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.8.4"
uuid = { version = "0.8.2", features = ["v4"] }